# run_binary_example

./: BUILD.bazel  WORKSPACE  generate_file.js  package-lock.json  package.json
tools/: bazel_deps.bzl
